// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: Shift/Reset > Answer-type polymorphism > should handle different answer and result types 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "reset shift ShiftPair (λk -> λv -> "result") 123",
    "type": "?5",
  },
}
`;

exports[`Inference: Shift/Reset > Reset > should add handler to context stack 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "reset 10",
    "type": "Num",
  },
}
`;

exports[`Inference: Shift/Reset > Reset > should infer type for reset with simple value 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "reset 10",
    "type": "Num",
  },
}
`;

exports[`Inference: Shift/Reset > Reset > should infer type for reset with simple value 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
    },
    "term": {
      "term": {
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 10,
        },
      },
      "type": "Reset",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Num",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Shift/Reset > Shift > should infer type within reset 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?3) -> (closure: (?5 :: Type) -| Γ: x; v; k)",
      "?2 ~~ ?3",
    ],
    "term": "reset shift ShiftPair (λk -> λv -> k v) 42",
    "type": "?8",
  },
}
`;

exports[`Inference: Shift/Reset > Shift > should infer type within reset 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "lvl": 2,
        "right": {
          "binder": {
            "annotation": {
              "type": "Neutral",
              "value": {
                "type": "Var",
                "variable": {
                  "lvl": 2,
                  "type": "Meta",
                  "val": 3,
                },
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "x",
          },
          "closure": {
            "ctx": {
              "env": [
                {
                  "name": {
                    "type": "Lambda",
                    "variable": "v",
                  },
                  "nf": {
                    "type": "Neutral",
                    "value": {
                      "type": "Var",
                      "variable": {
                        "lvl": 1,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Lambda",
                      "variable": "v",
                    },
                    "source",
                    {
                      "type": "Neutral",
                      "value": {
                        "type": "Var",
                        "variable": {
                          "lvl": 1,
                          "type": "Meta",
                          "val": 2,
                        },
                      },
                    },
                  ],
                },
                {
                  "name": {
                    "type": "Lambda",
                    "variable": "k",
                  },
                  "nf": {
                    "type": "Neutral",
                    "value": {
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Lambda",
                      "variable": "k",
                    },
                    "source",
                    {
                      "type": "Neutral",
                      "value": {
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Meta",
                          "val": 1,
                        },
                      },
                    },
                  ],
                },
              ],
              "handlers": [],
              "implicits": [],
              "metas": {
                "1": {
                  "ann": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "meta": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 1,
                  },
                },
                "2": {
                  "ann": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "meta": {
                    "lvl": 1,
                    "type": "Meta",
                    "val": 2,
                  },
                },
              },
              "sigma": {},
              "zonker": {},
            },
            "term": {
              "type": "Var",
              "variable": {
                "lvl": 3,
                "type": "Meta",
                "val": 5,
              },
            },
            "type": "Closure",
          },
          "type": "Abs",
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "lvl": 2,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 2,
              "type": "Meta",
              "val": 3,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 3,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
      "7": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 7,
        },
      },
      "8": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 8,
        },
      },
    },
    "term": {
      "term": {
        "body": {
          "arg": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 42,
            },
          },
          "func": {
            "arg": {
              "binding": {
                "annotation": {
                  "type": "Var",
                  "variable": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 1,
                  },
                },
                "icit": "Explicit",
                "type": "Lambda",
                "variable": "k",
              },
              "body": {
                "binding": {
                  "annotation": {
                    "type": "Var",
                    "variable": {
                      "lvl": 1,
                      "type": "Meta",
                      "val": 2,
                    },
                  },
                  "icit": "Explicit",
                  "type": "Lambda",
                  "variable": "v",
                },
                "body": {
                  "arg": {
                    "type": "Var",
                    "variable": {
                      "index": 0,
                      "type": "Bound",
                    },
                  },
                  "func": {
                    "type": "Var",
                    "variable": {
                      "index": 1,
                      "type": "Bound",
                    },
                  },
                  "icit": "Explicit",
                  "type": "App",
                },
                "type": "Abs",
              },
              "type": "Abs",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "ShiftPair",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
          "icit": "Explicit",
          "type": "App",
        },
        "type": "Shift",
      },
      "type": "Reset",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "type": "Var",
        "variable": {
          "lvl": 0,
          "type": "Meta",
          "val": 8,
        },
      },
    },
    "typedTerms": {},
  },
}
`;
